Fix start script for jfx11, assembly file